--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 </body>
 <main>
     <h1> ADSO3314566</h1>
-    <img src="dog.jpg" alt="">
+    <img src="WhatsApp Image 2026-02-12 at 7.20.08 AM.jpeg" alt="">
     <h4>dana toro</h4>
 </main>
 
