cambio de imagen 2

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>ADSO3314566</title>
     <style>
         body {
-            background: linear-gradient(pink, blue);
+            background: linear-gradient(pink, rgb(135, 159, 179));
             color: white;
             font-family: sans-serif; 
             display: flex;
