se modifico nombre imagen

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>ADSO3314566</title>
     <style>
         body {
-            background: linear-gradient(pink, rgb(135, 159, 179));
+            background: linear-gradient(rgb(125, 227, 245), rgb(241, 249, 255));
             color: white;
             font-family: sans-serif; 
             display: flex;
@@ -42,8 +42,8 @@
 </body>
 <main>
     <h1> ADSO3314566</h1>
-    <img src="WhatsApp Image 2026-02-12 at 7.20.08 AM.jpeg" alt="">
-    <h4>dana toro</h4>
+    <img src="foto.jpeg" alt="">
+    <h4>Dana toro</h4>
 </main>
 
 </html>
