--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ADSO3314566</title>
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
         body {
             background: linear-gradient(rgb(125, 227, 245), rgb(241, 249, 255));
             color: white;
-            font-family: sans-serif; 
+            font-family: Poppins; 
             display: flex;
             justify-content: center;
             align-items: center;
@@ -33,6 +34,31 @@
                     font-size: 1.4rem;
                 }
             }
+            menu {
+                display: flex;
+                flex-direction: column;
+                gap: 0.6rem;
+                a:link, a:visited {
+                    background-color: lch(87.53% 24.1 226.89 / 0.87);
+                    color:rgb(255, 255, 255);
+                    border-radius: 12rem;
+                    padding: 0.4rem;
+                    display: flex;
+                    align-items: center;
+                    text-decoration: none;
+                    span {
+                        background-color: #e2e6e7;
+                        color: #ffffff;
+                        border-radius: 50%;
+                        font-size: 2rem;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        width: 80px;
+                        height: 80px;
+                    }
+
+            }
         }
     </style>
 </head>
@@ -44,6 +70,40 @@
     <h1> ADSO3314566</h1>
     <img src="foto.jpeg" alt="">
     <h4>Dana toro</h4>
+    <menu>
+
+        <a href="01-emmet/">
+            <span>01</span>
+            <aside>
+                <h4>Emmet</h4>
+                <small>work flow - Markup & Styling</small>
+            </aside>
+        </a>
+
+        <a href="02-html/">
+            <span>02</span>
+            <aside>
+                <h4>Html</h4>
+                <small>Structure - Hypertext Markup Language </small>
+            </aside>
+        </a>
+
+        <a href="03-css/">
+            <span>03</span>
+            <aside>
+                <h4>Css</h4>
+                <small>Look & Fell - Cascading Style Sheets</small>
+            </aside>
+        </a>
+
+        <a href="04-js/">
+            <span>04</span>
+            <aside>
+                <h4>Javascript</h4>
+                <small>Behavior - Programing Launguage</small>
+            </aside>
+        </a>
+    </menu>
 </main>
 
 </html>
